--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <div class="text">
             <h2>natijalarimiz</h2>
             <ul>
-              <li>150 000 dan ortiq baxtli mijozlar</li>
-              <li>O‘zbekiston bo‘ylab yetkazib berish</li>
-              <li>1 kunda ishlab chiqariladi</li>
+              <li class="l_hide">150 000 dan ortiq baxtli mijozlar</li>
+              <li class="r_hide">O‘zbekiston bo‘ylab yetkazib berish</li>
+              <li class="l_hide">1 kunda ishlab chiqariladi</li>
             </ul>
           </div>
           <div class="img">
@@ -63,21 +63,21 @@
             <img src="./img/idea.png" alt="img" />
           </div>
           <div class="cards">
-            <div class="card card1">
+            <div class="card card1 r_hide">
               <p>
                 Yaratuvchan Jamoa: Bizning jamoamiz yaratuvchan, ishtiyoqli va
                 kriative fikrli odamlardan iborat. Har bir loyihada yangi va
                 turli xil yondoshadi.
               </p>
             </div>
-            <div class="card card2">
+            <div class="card card2 r_hide">
               <p>
                 Professional Hayotiy Ta'lim: Bizning xizmatlarimizga ishlagan
                 mutaxassislarimiz sovga savdosining eng yaxshi natijalariga
                 erishish uchun tayyorlanganlar.
               </p>
             </div>
-            <div class="card card3">
+            <div class="card card3 r_hide">
               <p>
                 Sizning Muvaffaqiyatingiz Biz Uchun Muhimdir: Bizning maqsadimiz
                 - sizning hayotingizga yanada iliqlik qoshishdir.Bizning
@@ -88,14 +88,14 @@
         </div>
         <div class="container">
           <div class="cards">
-            <div class="card card4">
+            <div class="card card4 l_hide">
               <p>
                 Bizning muvaffaqiyatli loyihalardan iborat portfoliomizga
                 qiziqib bir marotaba qarab korimg. Biz nimalar qilayotganmiz va
                 qanday natijalarga erishganmizni ko'ring.
               </p>
             </div>
-            <div class="card card5">
+            <div class="card card5 l_hide">
               <p>
                 Sovga uchun samarali strategiyani qurib, tanlashni
                 osonlashtiring. Biz sizga eng yaxshi tavsiyalarni beramiz.
@@ -114,12 +114,12 @@
         <div class="container">
           <h2>Xaridorlarimiz</h2>
           <div class="photos">
-            <img src="./img/image 1.png" alt="img" />
-            <img src="./img/image 2.png" alt="img" />
-            <img src="./img/image 3.png" alt="img" />
-            <img src="./img/image 4.png" alt="img" />
-            <img src="./img/image 5.png" alt="img" />
-            <img src="./img/image 6.png" alt="img" />
+            <img src="./img/image 1.png" alt="img" class="l_hide"/>
+            <img src="./img/image 2.png" alt="img" class="u_hide"/>
+            <img src="./img/image 3.png" alt="img" class="r_hide"/>
+            <img src="./img/image 4.png" alt="img" class="l_hide"/>
+            <img src="./img/image 5.png" alt="img" class="u_hide"/>
+            <img src="./img/image 6.png" alt="img" class="r_hide"/>
           </div>
           <a target="_blank" href="https://www.instagram.com/podarokuz"
             >sovgalarni korish ...</a
@@ -133,19 +133,19 @@
       <div class="container">
         <h2>boglanish va buyurtmalar</h2>
         <div class="links">
-          <div class="card">
+          <div class="card l_hide">
             <a target="_blank" href="https://t.me/podarokuz_kanal" class="img">
               <img src="./img/tg.svg" alt="img" />
             </a>
             <a target="_blank" href="https://t.me/podarokuz_kanal">podarokuz</a>
           </div>
-          <div class="card">
+          <div class="card u_hide">
             <a target="_blank" href="tel:+998977248382" class="img">
               <img src="./img/tl.svg" alt="img" />
             </a>
             <a target="_blank" href="tel:+998977248382">+998 (97) 724-83-82</a>
           </div>
-          <div class="card">
+          <div class="card r_hide">
             <a
               target="_blank"
               href="https://www.instagram.com/podarokuz"
@@ -160,6 +160,6 @@
         </div>
       </div>
     </footer>
-    <script src="./main.js"></script>
+    <script async src="./main.js"></script>
   </body>
 </html>
