--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PodarokUz</title>
+    <link rel="icon" href="./img/cursor.png">
+
+
+
+    <meta name="description" content="Bu veb-sayt orqali koplab antiqa sovg`a buyumlarni topishingiz mumkin. Biz sizning ko'nglingizdagini topamiz, yasaymiz va ulashamiz">
+    <meta name="keywords" content="podarokuz,podarkalar,sovg'alar,sovg'a,tugulgan kun sovg'alari,gift">
+
+    <!-- Open Graph ve Twitter Card -->
+    <meta property="og:title" content="PodarokUz siz istagan narsalar">
+    <meta property="og:description" content="Bu veb-sayt orqali koplab antiqa sovg`a buyumlarni topishingiz mumkin">
+    <meta property="og:image" content="./img/download.jpg">
+    <meta name="twitter:card" content="PodarokUz">
+
+
+    
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
